[project]
name = "pysyncleo"
version = "0.2.4"
description = "Basic library for working with Syncleo UDP devices"
readme = "README.md"
authors = [
    { name = "DeKaN" }
]
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.14.2"
dependencies = [
    "cryptography>=44.0.0"
]

[project.urls]
Repository = "https://github.com/DeKaN/pysyncleo.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
    "zeroconf>=0.149.16"
]
